--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -21,3 +21,11 @@ jobs:
         env:
           BOT_TOKEN: ${{ secrets.BOT_TOKEN }}
           CHAT_ID: ${{ secrets.CHAT_ID }}
+          
+      - name: Commit state
+        run: |
+          git config user.name "github-actions"
+          git config user.email "actions@github.com"
+          git add state.json
+          git commit -m "update state" || echo "no changes"
+          git push
