--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -26,6 +26,6 @@ jobs:
         run: |
           git config user.name "github-actions"
           git config user.email "actions@github.com"
-          git add state.json
+          git add state.json telegram_state.json config.json enabled.txt
           git commit -m "update state" || echo "no changes"
           git push
