--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -31,4 +31,5 @@ jobs:
           git config user.email "actions@github.com"
           git add state.json telegram_state.json config.json enabled.txt
           git commit -m "update state" || echo "no changes"
+          git pull --rebase
           git push
