--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -31,7 +31,7 @@ jobs:
         run: |
           git config user.name "github-actions"
           git config user.email "actions@github.com"
-          git add state.json telegram_state.json config.json enabled.txt
+          git add .
           git commit -m "update state" || echo "no changes"
           git pull --rebase
           git push
