Update URLs for various clubs in config.json

--- a/config.json
+++ b/config.json
@@ -11,19 +11,19 @@
   "urls": [
     {
       "name": "Spojnia Gorna",
-      "url": "https://kluby.org/spojnia-gorna/dostepnosc?typ_obiektu=1032&czas_rezerwacji=2"
+      "url": "https://kluby.org/klub/ajax/dostepne_korty_wybrany_typ.php?klub=86&id_strony_klubu=60&czy_dedykowane=0&typ_obiektu=188&czas_rezerwacji=2"
     },
     {
       "name": "Morelowa - maczka",
-      "url": "https://kluby.org/mtc/dostepnosc?typ_obiektu=34&czas_rezerwacji=2"
+      "url": "https://kluby.org/klub/ajax/dostepne_korty_wybrany_typ.php?klub=14&id_strony_klubu=14&czy_dedykowane=0&typ_obiektu=34&czas_rezerwacji=2"
     },
     {
       "name": "Morelowa - sztuczna trawa",
-      "url": "https://kluby.org/mtc/dostepnosc?typ_obiektu=28&czas_rezerwacji=2"
+      "url": "https://kluby.org/klub/ajax/dostepne_korty_wybrany_typ.php?klub=14&id_strony_klubu=14&czy_dedykowane=0&typ_obiektu=28&czas_rezerwacji=2
     },
     {
       "name": "Morelowa - hard",
-      "url": "https://kluby.org/mtc/dostepnosc?typ_obiektu=636&czas_rezerwacji=2"
+      "url": "https://kluby.org/klub/ajax/dostepne_korty_wybrany_typ.php?klub=14&id_strony_klubu=14&czy_dedykowane=0&typ_obiektu=63&czas_rezerwacji=2"
     },
     {
       "name": "Korty u Macieja",
