Fix URL formatting for Morelowa - sztuczna trawa

--- a/config.json
+++ b/config.json
@@ -19,7 +19,7 @@
     },
     {
       "name": "Morelowa - sztuczna trawa",
-      "url": "https://kluby.org/klub/ajax/dostepne_korty_wybrany_typ.php?klub=14&id_strony_klubu=14&czy_dedykowane=0&typ_obiektu=28&czas_rezerwacji=2
+      "url": "https://kluby.org/klub/ajax/dostepne_korty_wybrany_typ.php?klub=14&id_strony_klubu=14&czy_dedykowane=0&typ_obiektu=28&czas_rezerwacji=2"
     },
     {
       "name": "Morelowa - hard",
