Update URLs and links in config.json

--- a/config.json
+++ b/config.json
@@ -11,27 +11,41 @@
   "urls": [
     {
       "name": "Spojnia Gorna",
-      "url": "https://kluby.org/klub/ajax/dostepne_korty_wybrany_typ.php?klub=86&id_strony_klubu=60&czy_dedykowane=0&typ_obiektu=188&czas_rezerwacji=2"
+      "link": "https://kluby.org/spojnia-gorna/dostepnosc?typ_obiektu=188&czas_rezerwacji=2"
+      "url": "https://kluby.org/klub/ajax/dostepne_korty_wybrany_typ.php?klub=86&id_strony_klubu=60&czy_dedykowane=0&typ_obiektu=188&czas_rezerwacji=4"
     },
     {
+      "name": "Spojnia Gorna - smart court",
+      "link": "https://kluby.org/spojnia-gorna/dostepnosc?typ_obiektu=1032&czas_rezerwacji=4"
+      "url": "https://kluby.org/klub/ajax/dostepne_korty_wybrany_typ.php?klub=86&id_strony_klubu=60&czy_dedykowane=0&typ_obiektu=1032&czas_rezerwacji=4"
+    },
+    
+    {
       "name": "Morelowa - maczka",
-      "url": "https://kluby.org/klub/ajax/dostepne_korty_wybrany_typ.php?klub=14&id_strony_klubu=14&czy_dedykowane=0&typ_obiektu=34&czas_rezerwacji=2"
+      "link": "https://kluby.org/mtc/dostepnosc?typ_obiektu=34&czas_rezerwacji=4"
+      "url": "https://kluby.org/klub/ajax/dostepne_korty_wybrany_typ.php?klub=14&id_strony_klubu=14&czy_dedykowane=0&typ_obiektu=34&czas_rezerwacji=4"
     },
     {
       "name": "Morelowa - sztuczna trawa",
-      "url": "https://kluby.org/klub/ajax/dostepne_korty_wybrany_typ.php?klub=14&id_strony_klubu=14&czy_dedykowane=0&typ_obiektu=28&czas_rezerwacji=2"
+      "link": "https://kluby.org/umacieja/dostepnosc?typ_obiektu=47&czas_rezerwacji=4",
+      "url": "https://kluby.org/klub/ajax/dostepne_korty_wybrany_typ.php?klub=14&id_strony_klubu=14&czy_dedykowane=0&typ_obiektu=28&czas_rezerwacji=4"
     },
     {
       "name": "Morelowa - hard",
-      "url": "https://kluby.org/klub/ajax/dostepne_korty_wybrany_typ.php?klub=14&id_strony_klubu=14&czy_dedykowane=0&typ_obiektu=63&czas_rezerwacji=2"
+      "link": "https://kluby.org/mtc/dostepnosc?typ_obiektu=636&czas_rezerwacji=4",
+      "url": "https://kluby.org/klub/ajax/dostepne_korty_wybrany_typ.php?klub=14&id_strony_klubu=14&czy_dedykowane=0&typ_obiektu=63&czas_rezerwacji=4"
     },
+    
     {
       "name": "Korty u Macieja",
-      "url": "https://kluby.org/umacieja/dostepnosc?typ_obiektu=47&czas_rezerwacji=2"
+      "link": "https://kluby.org/umacieja/dostepnosc?typ_obiektu=47&czas_rezerwacji=4" 
+      "url": "https://kluby.org/klub/ajax/dostepne_korty_wybrany_typ_termin.php?klub=15&id_strony_klubu=15&czy_dedykowane=0&typ_obiektu=47&czas_rezerwacji=4"
     },
+    
     {
       "name": "OSiR Bemowo",
-      "url": "https://kluby.org/osir-bemowo/dostepnosc?typ_obiektu=782&czas_rezerwacji=2"
+      "link": "https://kluby.org/osir-bemowo/dostepnosc?&czas_rezerwacji=4",
+      "url": "https://kluby.org/klub/ajax/dostepne_korty_wybrany_typ.php?klub=469&id_strony_klubu=919&czy_dedykowane=0&typ_obiektu=782&czas_rezerwacji=4"
     }
   ]
 }
