--- a/config.json
+++ b/config.json
@@ -26,7 +26,7 @@
     },
     {
       "name": "Morelowa - sztuczna trawa",
-      "link": "https://kluby.org/umacieja/dostepnosc?typ_obiektu=47&czas_rezerwacji=4",
+      "link": "https://kluby.org/mtc/dostepnosc?typ_obiektu=28&czas_rezerwacji=4",
       "url": "https://kluby.org/klub/ajax/dostepne_korty_wybrany_typ.php?klub=14&id_strony_klubu=14&czy_dedykowane=0&typ_obiektu=28&czas_rezerwacji=4"
     },
     {
